--- a/admin/admin.lyx
+++ b/admin/admin.lyx
@@ -202,5 +202,15 @@ filename "install/install.lyx"
 
 \end_layout
 
+\begin_layout Standard
+\begin_inset CommandInset include
+LatexCommand include
+filename "manage/manage.lyx"
+
+\end_inset
+
+
+\end_layout
+
 \end_body
 \end_document
