--- a/admin/admin.lyx
+++ b/admin/admin.lyx
@@ -82,6 +82,31 @@
 DEEPGREEN 数据库使用手册
 \end_layout
 
+\begin_layout Standard
+\begin_inset CommandInset toc
+LatexCommand tableofcontents
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset FloatList figure
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset FloatList table
+
+\end_inset
+
+
+\end_layout
+
 \begin_layout Part
 DEEPGREEN 概念和构架
 \end_layout
