--- a/admin/admin.lyx
+++ b/admin/admin.lyx
@@ -257,5 +257,15 @@ filename "db/db.lyx"
 
 \end_layout
 
+\begin_layout Standard
+\begin_inset CommandInset include
+LatexCommand include
+filename "perf/perf.lyx"
+
+\end_inset
+
+
+\end_layout
+
 \end_body
 \end_document
